# finledger

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: audit.yml  ci.yml  release.yml
docs/: SDD.md  SPEC.md  TASKS.md
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  logger.rs  main.rs  utils.rs
src-tauri/src/commands/: attachment_check.rs  auth.rs  backup.rs  backup_scheduler.rs  backup_settings.rs  book.rs  dashboard.rs  export.rs  image_staging.rs  mod.rs  record.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/tests/: business_rules.rs  data_safety.rs
src/__tests__/: chart-theme.test.ts
src/components/: BrandPanel.vue  MainLayout.vue
src/composables/: useDebounce.ts  useRecordForm.ts  useRecords.ts  useSettlement.ts
src/router/: index.ts
src/stores/: auth.ts  pageHeader.ts  theme.ts
src/styles/: global.scss
src/types/: index.ts
src/utils/: chart-theme.ts  invoke.ts
src/views/: BackupManagement.vue  BookDetail.vue  BookList.vue  Dashboard.vue  InitWizard.vue  Login.vue  Settings.vue  UserManagement.vue
