[package]
name = "finledger"
version = "0.1.0"
edition = "2021"

[lib]
name = "finledger_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "macros"] }
bcrypt = "0.16"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rust_xlsxwriter = "0.79"
base64 = "0.22"
mime_guess = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "local-time"] }
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
debug = "limited"
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = 2
debug = false
